--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -13,14 +13,14 @@
    <div class="header__menu-container">
       <nav class="header__nav">
          <ul class="header__nav-list">
-            <li><a class="header__nav-item" href="#lang">Возможности</a></li>
-            <li><a class="header__nav-item" href="#step">Как работает</a></li>
-            <li><a class="header__nav-item" href="#price">Стоимость</a></li>
+            <li><a class="header__nav-item" href="#lang">Opportunity</a></li>
+            <li><a class="header__nav-item" href="#step">How it works</a></li>
+            <li><a class="header__nav-item" href="#price">Price</a></li>
          </ul>
       </nav>
       <div class="button-box button-box--display">
-         <button class="btn-primary btn-primary--header" type="button" onclick="location.href='https://teamlogs.2dlab.ru/upload'">Загрузить файл</button>
-         <button class="btn-secondary btn-secondary--header" type="button" onclick="location.href='https://teamlogs.2dlab.ru/login'">Войти</button>
+         <button class="btn-primary btn-primary--header" type="button" onclick="location.href='https://teamlogs.2dlab.ru/upload'">Upload file</button>
+         <button class="btn-secondary btn-secondary--header" type="button" onclick="location.href='https://teamlogs.2dlab.ru/login'">log in</button>
       </div>
    </div>
 </header>
