--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -14,18 +14,18 @@
          <div class="footer__box-2">
             <nav class="footer__nav">
                <ul class="footer__nav-list">
-                  <li class="footer__nav-item nav-item__1"><a href="/oferta.html">Оферта</a></li>
-                  <li class="footer__nav-item nav-item__2"><a href="/privacy.html">Политика конфиденциальности</a></li>
-                  <li class="footer__nav-item nav-item__3"><a href="/return.html">Правила оформления возврата денежных средств</a></li>
+                  <li class="footer__nav-item nav-item__1"><a href="/oferta.html">Offer</a></li>
+                  <li class="footer__nav-item nav-item__2"><a href="/privacy.html">Privacy Policy</a></li>
+                  <li class="footer__nav-item nav-item__3"><a href="/return.html">Rules for issuing a refund</a></li>
                </ul>
             </nav>
             <div class="footer__text-box">
-               <address class="footer__city">Санкт-Петербург — Владивосток</address>
-               <p class="footer__copy">© 2dlab, 2021. Все права защищены.</p>
+               <address class="footer__city">Saint Petersburg — Vladivostok</address>
+               <p class="footer__copy">© 2dlab, 2021. All rights reserved.</p>
             </div>
          </div>
       </div>
       <hr class="separator" />
-      <p class="footer__company">ООО «ТУДИЛАБ», ОГРН 1202500014573, ИНН 2537144032</p>
+      <p class="footer__company">Ltd «TUDILAB», OGRN 1202500014573, TIN 2537144032</p>
    </div>
 </footer>
