Update html files

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -20,12 +20,12 @@
                </ul>
             </nav>
             <div class="footer__text-box">
-               <address class="footer__city">Saint Petersburg — Vladivostok</address>
-               <p class="footer__copy">© 2dlab, 2021. All rights reserved.</p>
+               <address class="footer__city">USA — Los Angeles</address>
+               <p class="footer__copy">© 2dlab, 2022. All rights reserved.</p>
             </div>
          </div>
       </div>
       <hr class="separator" />
-      <p class="footer__company">Ltd «TUDILAB», OGRN 1202500014573, TIN 2537144032</p>
+      <p class="footer__company">Ltd «TUDILAB», </p>
    </div>
 </footer>
