--- a/src/scss/page/index/_section-4.scss
+++ b/src/scss/page/index/_section-4.scss
@@ -256,7 +256,7 @@
    /* Box 9 */
    .box-9 {
       flex-flow: row;
-      padding: 30px 0px 30px 30px;
+      padding: 30px 0px 30px 30px !important;
       flex: 1 0 calc(60% - 15px);
    }
    .box-9__picture {
