Format: file system

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -3,12 +3,36 @@
       <div class="footer__box-1">
          <div class="footer__social-box">
             <a class="footer__tg-link" href="https://t.me/teamlogs">
-               <img class="footer__tg-img" src="/img/svg/telegram.svg" loading="lazy" alt="Телеграм" width="50" height="50" />
-               <img class="footer__tg-img-2" src="/img/svg/telegram-hover.svg" loading="lazy" alt="Телеграм" width="50" height="50" />
+               <img
+                  class="footer__tg-img"
+                  src="/img/svg/telegram.svg"
+                  loading="lazy"
+                  alt="Телеграм"
+                  width="50"
+                  height="50" />
+               <img
+                  class="footer__tg-img-2"
+                  src="/img/svg/telegram-hover.svg"
+                  loading="lazy"
+                  alt="Телеграм"
+                  width="50"
+                  height="50" />
             </a>
             <a class="footer__vk-link" href="https://vk.com/teamlogs">
-               <img class="footer__vk-img" src="/img/svg/vk.svg" loading="lazy" alt="Вконтакте" width="50" height="50" />
-               <img class="footer__vk-img-2" src="/img/svg/vk-hover.svg" loading="lazy" alt="Вконтакте" width="50" height="50" />
+               <img
+                  class="footer__vk-img"
+                  src="/img/svg/vk.svg"
+                  loading="lazy"
+                  alt="Вконтакте"
+                  width="50"
+                  height="50" />
+               <img
+                  class="footer__vk-img-2"
+                  src="/img/svg/vk-hover.svg"
+                  loading="lazy"
+                  alt="Вконтакте"
+                  width="50"
+                  height="50" />
             </a>
          </div>
          <div class="footer__box-2">
@@ -26,6 +50,6 @@
          </div>
       </div>
       <hr class="separator" />
-      <p class="footer__company">Ltd «TUDILAB», </p>
+      <p class="footer__company">Ltd «TUDILAB»,</p>
    </div>
 </footer>
