--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -19,8 +19,18 @@
          </ul>
       </nav>
       <div class="button-box button-box--display">
-         <button class="btn-primary btn-primary--header" type="button" onclick="location.href='https://teamlogs.2dlab.ru/upload'">Upload file</button>
-         <button class="btn-secondary btn-secondary--header" type="button" onclick="location.href='https://teamlogs.2dlab.ru/login'">log in</button>
+         <button
+            class="btn-primary btn-primary--header"
+            type="button"
+            onclick="location.href='https://teamlogs.2dlab.ru/upload'">
+            Upload file
+         </button>
+         <button
+            class="btn-secondary btn-secondary--header"
+            type="button"
+            onclick="location.href='https://teamlogs.2dlab.ru/login'">
+            log in
+         </button>
       </div>
    </div>
 </header>
