--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,91 +1,174 @@
 @charset "UTF-8";
-@viewport {
-  width: device-width;
-  initial-scale: 1;
-}
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, details, summary,
-time, mark, audio, video, button, mark {
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+details,
+summary,
+time,
+audio,
+video,
+button,
+mark {
+   box-sizing: border-box;
    margin: 0;
    padding: 0;
-   border: 0;
    font-size: 100%;
+   text-decoration: none;
    vertical-align: baseline;
+   list-style: none;
+   background-color: transparent;
+   border: 0;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0;
    margin-inline-end: 0;
-   padding-inline-start: 0px;
-   box-sizing: border-box;
-   text-decoration: none;
-   list-style: none;
-   background-color: transparent;
+   padding-inline-start: 0;
 }
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, main, img {
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+main,
+img {
    display: block;
 }
- 
+
 input {
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   -ms-appearance: none;
-   appearance: none;
-   padding: 0px;
-   margin: 0;
-   border-width: 0px;
    display: block;
-   text-align: start;
-   outline: none;
-   border-color: transparent;
-   letter-spacing: normal;
-   word-spacing: normal;
-   line-height: normal;
-   text-transform: none;
-   text-indent: 0px;
-   text-shadow: none;
+   margin: 0;
+   padding: 0;
+   color: inherit;
+   font-weight: normal;
+   font-size: inherit;
+   font-family: inherit;
    font-style: normal;
+   font-stretch: normal;
+   line-height: normal;
+   letter-spacing: normal;
+   text-align: start;
+   text-transform: none;
+   text-indent: 0;
+   text-shadow: none;
+   word-spacing: normal;
+   border-color: transparent;
+   border-width: 0;
+   outline: none;
+   appearance: none;
    font-variant-ligatures: none;
    font-variant-caps: normal;
    font-variant-numeric: normal;
    font-variant-east-asian: normal;
-   font-weight: normal;
-   font-stretch: normal;
-   font-size: inherit;
-   font-family: inherit;
    text-rendering: inherit;
-   color: inherit;
+   -webkit-appearance: none;
+   -moz-appearance: none;
 }
-blockquote, q {
+
+blockquote,
+q {
    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-   content: '';
-   content: none;
+
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
+   content: "";
 }
-:before,
-:after {
-  box-sizing: border-box;
+
+::before,
+::after {
+   box-sizing: border-box;
 }
+
 table {
    border-collapse: collapse;
    border-spacing: 0;
 }
+
 html {
-   overflow-x: hidden;
-   font: normal 400 16px/1.5 'Inter';
    height: 100%;
+   overflow-x: hidden;
+   font: normal 400 16px/1.5 "Inter";
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -ms-text-size-adjust: 100%;
@@ -95,21 +178,23 @@ html {
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    scroll-behavior: smooth;
- }
+}
+
 body {
-   overflow-x: hidden;
    position: relative;
-   font: normal 400 16px/1.5 'Inter';
-   color: var(--color_text);
    min-width: 320px;
    height: 100%;
+   overflow-x: hidden;
+   color: var(--color_text);
+   font: normal 400 16px/1.5 "Inter";
    scroll-behavior: smooth;
 }
 
 b,
 strong {
-  font-weight: 700;
+   font-weight: 700;
 }
+
 u {
    text-decoration: underline;
 }
