--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,21 +1,23 @@
 .footer {
    padding: 50px 15px;
    contain: layout paint;
-   // border: 1px solid black;
 }
+
 .footer__content {
    max-width: 460px;
    margin: 0 auto;
 }
+
 .footer__social-box {
    display: flex;
    gap: 15px;
    margin-bottom: 15px;
 }
+
 .footer__tg-link,
 .footer__vk-link {
-   display: block;
    position: relative;
+   display: block;
    width: 50px;
    height: 50px;
 }
@@ -25,14 +27,17 @@
    top: 0;
    visibility: hidden;
 }
+
 .footer__tg-link:hover > .footer__tg-img-2 {
    visibility: visible;
 }
+
 .footer__vk-img-2 {
    position: absolute;
    top: 0;
    visibility: hidden;
 }
+
 .footer__vk-link:hover > .footer__vk-img-2 {
    visibility: visible;
 }
@@ -46,11 +51,13 @@
    flex-flow: column;
    gap: 10px;
 }
+
 .footer__nav-item > a {
-   font: 400 14px/1.5 "Inter";
    color: var(--color_text);
+   font: 400 14px/1.5 "Inter";
    transition: all 0.2s linear;
 }
+
 .footer__nav-item > a:hover {
    color: var(--color_primary);
 }
@@ -64,9 +71,10 @@
 .footer__city,
 .footer__copy,
 .footer__company {
-   font: 400 14px/1.5 "Inter";
    color: var(--color_text);
+   font: 400 14px/1.5 "Inter";
 }
+
 .footer__company {
    opacity: 0.3;
 }
@@ -75,14 +83,14 @@
    display: block;
    width: 100%;
    height: 2px;
+   margin: 30px 0 !important;
+   background-color: #f5f5f5;
+   border: none;
+   border-radius: 2px;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0;
    margin-inline-end: 0;
-   margin: 30px 0;
-   border: none;
-   border-radius: 2px;
-   background-color: #f5f5f5;
 }
 
 @media (min-width: 576px) {
@@ -93,6 +101,7 @@
    .nav-item__1 {
       flex: 0 0 calc(10% - 15px);
    }
+
    .nav-item__2 {
       flex: 1 0 calc(50% - 15px);
    }
@@ -102,6 +111,7 @@
    .footer__content {
       max-width: 620px;
    }
+
    .footer__box-1 {
       display: flex;
       gap: 30px;
@@ -110,6 +120,7 @@
    .footer__box-2 {
       order: 1;
    }
+
    .footer__social-box {
       order: 2;
    }
@@ -119,27 +130,31 @@
    .footer__content {
       max-width: 940px;
    }
+
    .footer__box-1 {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
       gap: 30px;
+      align-items: center;
+      justify-content: space-between;
    }
 
    .footer__box-2 {
       display: flex;
       flex-flow: row;
    }
+
    .footer__nav {
       flex: 1 0 50%;
-      margin-bottom: 0px;
+      margin-bottom: 0;
    }
+
    .footer__text-box {
       flex: 1 0 50%;
    }
+
    .footer__social-box {
       order: 2;
-      margin-bottom: 0px;
+      margin-bottom: 0;
    }
 }
 
