--- a/src/scss/documents.scss
+++ b/src/scss/documents.scss
@@ -1,6 +1,6 @@
-@import 'base/reset';
-@import 'base/var';
-@import 'base/fonts';
-@import 'base/global';
+@import "base/reset";
+@import "base/var";
+@import "base/fonts";
+@import "base/global";
 
-@import 'page/documents/documents';
+@import "page/documents/documents";
