--- a/src/scss/page/index/_section-1.scss
+++ b/src/scss/page/index/_section-1.scss
@@ -1,22 +1,24 @@
 .section-1 {
-   overflow-x: hidden;
    margin-bottom: 60px;
-   padding: clamp(3.75rem, 2.4563rem + 6.0878vw, 6.87rem)   /* 30px - 110px */
-            clamp(0.93rem, -0.2393rem + 5.5024vw, 3.75rem); /* 15px - 60px */
-   border-radius: 20px;
+   padding: clamp(3.75rem, 2.4563rem + 6.0878vw, 6.87rem) /* 30px - 110px */
+      clamp(0.93rem, -0.2393rem + 5.5024vw, 3.75rem); /* 15px - 60px */
+   overflow-x: hidden;
    background-color: var(--color_primary);
+   border-radius: 20px;
 }
+
 .section-1__content {
    display: flex;
    flex-flow: column;
    gap: 30px;
-   margin-bottom: clamp(2.5rem, 1.4634rem + 4.8780vw, 5rem);
+   margin-bottom: clamp(2.5rem, 1.4634rem + 4.878vw, 5rem);
 }
+
 .section-1__img {
-   margin: 0 auto;
    height: auto;
+   margin: 0 auto;
    border-radius: 20px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
 @media all and (min-width: 576px) {
    .section-1 {
@@ -26,13 +28,15 @@
 @media all and (min-width: 768px) {
    .section-1 {
       margin-bottom: 135px;
-      padding-bottom: 300px; 
+      padding-bottom: 300px;
    }
+
    .section-1__hero {
       position: absolute;
-      width: 100%;
       left: 0;
+      width: 100%;
    }
+
    .section-1__img {
       width: 615px;
    }
@@ -40,8 +44,9 @@
 @media all and (min-width: 992px) {
    .section-1 {
       margin-bottom: 175px;
-      padding-bottom: 450px; 
+      padding-bottom: 450px;
    }
+
    .section-1__img {
       width: 940px;
    }
@@ -49,8 +54,9 @@
 @media all and (min-width: 1200px) {
    .section-1 {
       margin-bottom: 240px;
-      padding-bottom: 550px; 
+      padding-bottom: 550px;
    }
+
    .section-1__img {
       width: 1160px;
    }
