--- a/src/scss/page/index/_section-2.scss
+++ b/src/scss/page/index/_section-2.scss
@@ -4,33 +4,35 @@
 }
 
 .section-2__content {
-   overflow: hidden;
    display: flex;
    flex-flow: column;
-   justify-content: space-between;
    gap: 30px;
+   justify-content: space-between;
    max-width: 460px;
    margin: 0 auto;
    margin-bottom: 60px;
-   padding: clamp(1.85rem, 1.0622rem + 3.7073vw, 3.75rem)  /* 30-60px */
-            clamp(0.93rem, 0.0220rem + 4.2732vw, 3.12rem); /* 15-50px */
-   padding-right: 0px;
-   padding-bottom: 0px;
-   border-radius: 20px;
+   padding: clamp(1.85rem, 1.0622rem + 3.7073vw, 3.75rem) /* 30-60px */ clamp(0.93rem, 0.022rem + 4.2732vw, 3.12rem); /* 15-50px */
+   padding-right: 0;
+   padding-bottom: 0;
+   overflow: hidden;
    background-color: var(--color_baground);
+   border-radius: 20px;
 }
+
 .section-2__text {
    display: flex;
    flex-flow: column;
    gap: 15px;
 }
+
 .section-2__hero {
    margin-left: auto;
 }
+
 .section-2__img {
    height: auto;
-   border-radius: 20px 0px 0px 0px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   border-radius: 20px 0 0;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
 
 @media all and (min-width: 576px) {
@@ -49,10 +51,12 @@
       flex-flow: row;
       max-width: 940px;
       margin-bottom: 100px;
-   } 
+   }
+
    .section-2__text {
       flex: 1 0 50%;
    }
+
    .section-2__img {
       width: 500px;
    }
@@ -62,9 +66,11 @@
       max-width: 1160px;
       margin-bottom: 120px;
    }
+
    .section-2__text {
       flex: 1 0 40%;
    }
+
    .section-2__img {
       width: 650px;
    }
