--- a/src/scss/page/index/_section-3.scss
+++ b/src/scss/page/index/_section-3.scss
@@ -1,6 +1,7 @@
 .section-3 {
    margin-bottom: 60px;
 }
+
 .section-3__title-2 {
    max-width: 460px;
    margin: 0 auto;
@@ -8,92 +9,92 @@
 }
 
 .section-3__content {
-   overflow: hidden;
    display: flex;
    flex-flow: column;
    gap: 20px;
-   margin: 0 auto;
    max-width: 460px;
+   margin: 0 auto;
+   overflow: hidden;
    contain: layout paint;
 }
 
-
 /* Box properties */
 .box {
-   overflow: hidden;
    display: flex;
    flex-flow: column;
    gap: 30px;
-   padding: 0px 0px 30px 30px;
+   padding: 0 0 30px 30px;
+   overflow: hidden;
+   background-color: var(--color_baground);
    border: 2px solid var(--color_baground);
    border-radius: 20px;
-   background-color: var(--color_baground);
 }
-
 
 /* Box-1 */
 .box-1 {
    padding: 30px;
 }
+
 .box-1__img {
    border-radius: 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
-
 
 /* Box-2 */
 .box-2__img {
+   height: auto;
    margin-top: -140px;
    margin-left: auto;
-   height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
+
 .box-2__mark-box {
    margin-bottom: 15px;
 }
+
 .box-2__title-3 {
    margin-bottom: 30px;
 }
+
 .box-2__mark {
-   font: 400 clamp(1rem, 0.9502rem + 0.2341vw, 1.12rem)/1.5 'Inter'; /* 16px - 18px */
-   color: var(--color_placeholder);
    margin-bottom: 5px;
-}
-.box-2__text-2 {
-   font: 400 clamp(0.75rem, 0.7002rem + 0.2341vw, 0.87rem)/1.5 'Inter'; /* 12px - 14px */
-   color: var(--color_text);
+   color: var(--color_placeholder);
+   font: 400 clamp(1rem, 0.9502rem + 0.2341vw, 1.12rem) / 1.5 "Inter"; /* 16px - 18px */
 }
 
+.box-2__text-2 {
+   color: var(--color_text);
+   font: 400 clamp(0.75rem, 0.7002rem + 0.2341vw, 0.87rem) / 1.5 "Inter"; /* 12px - 14px */
+}
 
 /* Box-3 */
 .box-3__img {
+   height: auto;
    margin-top: -30px;
    margin-left: auto;
-   height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
-
 
 /* Box-4 */
 .box-4__img {
+   height: auto;
    margin-top: -10px;
    margin-left: auto;
-   height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
-
 
 /* Box-5 */
 .box-5__img {
+   height: auto;
    margin-top: -10px;
    margin-left: auto;
-   height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
+
 .box-5__text {
    display: flex;
    flex-flow: column;
@@ -101,14 +102,14 @@
    padding-right: 30px;
 }
 
-
 /* Box-6 */
 .box-6__img {
-   margin-left: auto;
    height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   margin-left: auto;
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
+
 .box-6__text {
    display: flex;
    flex-flow: column;
@@ -120,8 +121,8 @@
    /* Box 1 */
    .box-1 {
       flex-flow: row nowrap;
-      align-items: center;
       gap: 15px;
+      align-items: center;
    }
 
    /* Box 2 */
@@ -140,12 +141,11 @@
    }
 }
 
-
-
 @media all and (min-width: 576px) {
    .section-3__content {
       max-width: 620px;
    }
+
    .section-3__title-2 {
       max-width: 620px;
    }
@@ -165,7 +165,7 @@
    .box-4__img {
       width: 420px;
       margin-top: -10px;
-   } 
+   }
 
    /* Box 5 */
    .box-5__img {
@@ -174,31 +174,33 @@
 
    .box-6__img {
       width: 420px;
-      margin-top: 0px;
-   } 
+      margin-top: 0;
+   }
 }
-
-
 
 @media all and (min-width: 768px) {
    .section-3 {
       margin-bottom: 80px;
    }
+
    /* Box 2 */
    .box-2 {
       flex-flow: row nowrap;
-      padding: 30px 0px 30px 30px;
+      padding: 30px 0 30px 30px;
    }
+
    .box-2__text {
       flex: 1 0 40%;
    }
+
    .box-2__picture {
       order: 2;
    }
+
    .box-2__img {
       width: 290px;
-      margin-top: 0px;
-      border-radius: 15px 0px 0px 15px;
+      margin-top: 0;
+      border-radius: 15px 0 0 15px;
    }
 
    /* Box 3,4,6 */
@@ -215,28 +217,29 @@
    }
 }
 
-
-
 @media all and (min-width: 992px) {
    .section-3 {
       margin-bottom: 100px;
    }
+
    .section-3__content {
       flex-flow: row wrap;
       max-width: 940px;
    }
+
    .section-3__title-2 {
-      max-width: 940px; 
+      max-width: 940px;
       margin-bottom: 50px;
    }
 
    /* Box 1 - 2 */
    .box-1 {
-      flex-flow: column;
-      align-items: flex-start;
-      gap: 30px;
       flex: 1 0 calc(40% - 15px);
+      flex-flow: column;
+      gap: 30px;
+      align-items: flex-start;
    }
+
    .box-2 {
       flex: 1 0 calc(60% - 15px);
    }
@@ -250,41 +253,44 @@
    /* Box 5 -6 */
    .box-5 {
       flex: 1 0 calc(45% - 15px);
-      padding: 30px 0px 0px 30px;
       gap: 30px;
+      padding: 30px 0 0 30px;
    }
+
    .box-5__picture {
       order: 2;
    }
+
    .box-5__text {
       order: 1;
    }
+
    .box-5__img {
-      margin-top: 0px;
-      border-radius: 15px 0px 0px 0px;
+      margin-top: 0;
+      border-radius: 15px 0 0;
    }
+
    .box-6 {
       flex: 1 0 calc(55% - 15px);
    }
-
 }
-
-
 
 @media all and (min-width: 1200px) {
    .section-3 {
       margin-bottom: 120px;
    }
+
    .section-3__content {
       max-width: 1160px;
    }
+
    .section-3__title-2 {
       max-width: 1160px;
       margin-bottom: 60px;
    }
 
    .box {
-      padding: 50px 50px 50px 50px;
+      padding: 50px;
    }
 
    /* Box 1 */
@@ -296,24 +302,26 @@
    .box-2 {
       flex: 1 0 calc(65% - 15px);
    }
+
    .box-2__img {
       width: 300px;
    }
 
-    /* Box 2,3,4,6 */ 
-    .box-2,
-    .box-3,
-    .box-4,
-    .box-6 {
-      padding: 50px 0px 50px 50px;
-    }
-     /* Box 3,5 */ 
+   /* Box 2,3,4,6 */
+   .box-2,
+   .box-3,
+   .box-4,
+   .box-6 {
+      padding: 50px 0 50px 50px;
+   }
+
+   /* Box 3,5 */
    .box-3__img,
    .box-5__img {
       width: 500px;
    }
 
-    /* Box 4 */ 
+   /* Box 4 */
    .box-4__img {
       width: 500px;
       margin-top: -30px;
