--- a/src/scss/page/index/_section-4.scss
+++ b/src/scss/page/index/_section-4.scss
@@ -1,56 +1,59 @@
 .section-4 {
-   padding-top: 130px;
-   width: calc(100% + 30px) ;
+   width: calc(100% + 30px);
    margin-left: -15px;
+   padding-top: 130px;
    background-color: var(--color_baground);
 }
+
 .section-4__title-1 {
    max-width: 460px;
    margin: 0 auto;
    margin-bottom: 30px;
    padding: 0 15px;
 }
+
 .section-4__title-2 {
    max-width: 460px;
    margin-bottom: 15px;
 }
+
 .section-4__content-1,
 .section-4__content-2 {
-   overflow: hidden;
    display: flex;
    flex-flow: column;
    gap: 20px;
+   max-width: 460px;
    margin: 0 auto;
    margin-bottom: 100px;
    padding: 0 15px;
-   max-width: 460px;
+   overflow: hidden;
    contain: layout paint;
 }
+
 .section-4__content-2 {
-   margin-bottom: 0px;
+   margin-bottom: 0;
    padding-bottom: 60px;
 }
 
-
 /* Box properties */
 .box--bg {
-   overflow: hidden;
    display: flex;
    flex-flow: column;
    gap: 30px;
-   padding: 0px 0px 30px 30px;
-   border-radius: 20px;
+   padding: 0 0 30px 30px;
+   overflow: hidden;
    background-color: var(--color_base);
+   border-radius: 20px;
 }
-
 
 /* Box 7 */
 .box-7__img {
-   margin-left: auto;
    height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 7%);
+   margin-left: auto;
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 7%);
 }
+
 .box-7__text {
    display: flex;
    flex-flow: column;
@@ -58,32 +61,33 @@
    padding-right: 30px;
 }
 
-
 /* Box 8 */
 .box-8__img {
-   margin-left: auto;
    height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 7%);
+   margin-left: auto;
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 7%);
 }
+
 .box-8__text {
    display: flex;
    flex-flow: column;
    gap: 15px;
    padding-right: 30px;
 }
-.section-4__mark {
-   color: var( --color_placeholder);
-}
 
+.section-4__mark {
+   color: var(--color_placeholder);
+}
 
 /* Box 9 */
 .box-9__img {
-   margin-left: auto;
    height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 7%);
+   margin-left: auto;
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 7%);
 }
+
 .box-9__text {
    display: flex;
    flex-flow: column;
@@ -91,14 +95,14 @@
    padding-right: 30px;
 }
 
-
 /* Box-10 */
 .box-10__img {
-   margin-left: auto;
    height: auto;
-   border-radius: 0px 0px 0px 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   margin-left: auto;
+   border-radius: 0 0 0 15px;
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
+
 .box-10__text {
    display: flex;
    flex-flow: column;
@@ -110,14 +114,17 @@
 .box-11 {
    padding: 30px;
 }
+
 .section-4__hero-box {
    display: flex;
    gap: 15px;
 }
+
 .box-11__img {
    border-radius: 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
+
 .box-11__text {
    display: flex;
    flex-flow: column;
@@ -125,15 +132,16 @@
    padding-right: 30px;
 }
 
-
 /* Box-12 */
 .box-12 {
    padding: 30px;
 }
+
 .box-12__img {
    border-radius: 15px;
-   box-shadow: 0px 4px 70px 0px rgb(27 27 40 / 10%);
+   box-shadow: 0 4px 70px 0 rgb(27 27 40 / 10%);
 }
+
 .box-12__text {
    display: flex;
    flex-flow: column;
@@ -150,41 +158,41 @@
    }
 }
 
-
-
 @media all and (min-width: 576px) {
    .section-4__content-1,
    .section-4__content-2 {
       max-width: 620px;
    }
+
    .section-4__title-1,
    .section-4__title-2 {
       max-width: 620px;
    }
 }
 
-
-
 @media all and (min-width: 768px) {
    .section-4__content-1,
-   .section-4__content-2  {
-      padding: 0px;
+   .section-4__content-2 {
+      padding: 0;
    }
+
    .section-4__content-2 {
       padding-bottom: 80px;
    }
-   
+
    .section-4__title-1 {
       margin-bottom: 40px;
-      padding: 0px;
+      padding: 0;
    }
+
    .section-4__title-2 {
       margin-bottom: 25px;
    }
+
    .box-7__img,
    .box-8__img,
    .box-9__img,
-   .box-10__img  {
+   .box-10__img {
       width: 400px;
    }
 
@@ -193,10 +201,12 @@
       flex-flow: row;
       align-items: center;
    }
+
    /* Box 11 */
    .section-4__hero-box {
       flex: 1 0 calc(30% - 15px);
-   }   
+   }
+
    .box-11__text {
       flex: 1 0 calc(70% - 15px);
    }
@@ -205,92 +215,99 @@
    .box-12__picture {
       flex: 1 0 calc(30% - 15px);
    }
+
    .box-12__text {
       flex: 1 0 calc(70% - 15px);
    }
 }
 
-
-
 @media all and (min-width: 992px) {
    .section-4__content-1,
-   .section-4__content-2  {
+   .section-4__content-2 {
       flex-flow: row wrap;
       max-width: 940px;
    }
+
    .section-4__content-2 {
       padding-bottom: 100px;
    }
+
    .section-4__title-1 {
-      max-width: 940px; 
+      max-width: 940px;
       margin-bottom: 50px;
    }
-   .section-4__title-2  {
-      max-width: 940px; 
-      margin-bottom: 0px;
+
+   .section-4__title-2 {
+      flex: 1 0 calc(5% - 15px);
+      max-width: 940px;
+      margin-bottom: 0;
    }
 
    /* Box-7 */
    .box-7 {
       flex: 1 0 calc(50% - 15px);
    }
+
    .box-7__img {
       width: 500px;
    }
 
    /* Box 8 */
    .box-8 {
-      padding: 30px 0px 0px 30px;
       flex: 1 0 calc(50% - 15px);
+      padding: 30px 0 0 30px;
    }
+
    .box-8__picture {
       order: 2;
    }
+
    .box-8__img {
       width: 500px;
    }
+
    .box-8__text {
       order: 1;
    }
 
    /* Box 9 */
    .box-9 {
-      flex-flow: row;
-      padding: 30px 0px 30px 30px !important;
       flex: 1 0 calc(60% - 15px);
+      flex-flow: row;
+      padding: 30px 0 30px 30px !important;
    }
+
    .box-9__picture {
-      margin-top: -30px;
       order: 2;
+      margin-top: -30px;
    }
+
    .box-9__text {
       order: 1;
-      padding-right: 0px;
+      padding-right: 0;
    }
 
-    /* Box 10 */
-    .box-10 {
+   /* Box 10 */
+   .box-10 {
       flex: 1 0 calc(40% - 15px);
-   }
-
-
-   .section-4__title-2 {
-      flex: 1 0 calc(5% - 15px);
    }
 
    /* Box 11 */
    .box-11 {
+      flex: 1 0 calc(35% - 15px);
       flex-flow: column;
       align-items: flex-start;
-      flex: 1 0 calc(35% - 15px);
    }
+
    .section-4__hero-box {
       flex: none;
    }
+
    .box-11__img {
       width: 90px;
       height: 90px;
    }
+
    .box-11__text {
       flex: none;
       padding-right: 0;
@@ -298,85 +315,78 @@
 
    /* Box  12 */
    .box-12 {
+      flex: 1 0 calc(35% - 15px);
       flex-flow: column;
       align-items: flex-start;
-      flex: 1 0 calc(35% - 15px);
    }
+
    .box-12__picture {
       flex: none;
    }
+
    .box-12__img {
       width: 90px;
       height: 90px;
    }
+
    .box-12__text {
       flex: none;
       padding-right: 0;
    }
 }
 
-
-
 @media all and (min-width: 1200px) {
    .section-4__title-1 {
-      max-width: 1160px; 
+      max-width: 1160px;
       margin-bottom: 60px;
    }
-   .section-4__title-2  {
-      max-width: 1160px; 
+
+   .section-4__title-2 {
+      flex: 1 0 calc(25% - 15px);
+      max-width: 1160px;
    }
+
    .section-4__content-1,
    .section-4__content-2 {
       max-width: 1160px;
    }
+
    .section-4__content-2 {
       padding-bottom: 120px;
    }
 
-
    .box--bg {
-      padding: 50px 50px 50px 50px;
+      padding: 50px;
    }
-
 
    /* Boox 7 */
    .box-7 {
-      padding: 0px 0px 50px 50px;
+      padding: 0 0 50px 50px;
    }
-
 
    /* Box 8 */
    .box-8 {
-      padding: 50px 0px 0px 50px;
+      padding: 50px 0 0 50px;
    }
-   .box-8__img  {
+
+   .box-8__img {
       width: 550px;
    }
 
    /* Box 9 */
    .box-9__picture {
-      margin-top: 0px;
+      margin-top: 0;
    }
 
-
-  /* Box 10 */
+   /* Box 10 */
    .box-10 {
-      padding: 0px 0px 50px 50px;
+      padding: 0 0 50px 50px;
    }
 
-   .section-4__title-2 {
-      flex: 1 0 calc(25% - 15px);
-   }
-
-  /* Box 11-12 */
+   /* Box 11-12 */
    .box-11,
    .box-12 {
-      padding: 50px;
-   }
-
-     /* Box 11 */
-     .box-11,
-     .box-12 {
       flex: 1 0 calc(37% - 15px);
+      padding: 50px;
    }
 }
