--- a/src/scss/page/index/_section-5.scss
+++ b/src/scss/page/index/_section-5.scss
@@ -1,64 +1,65 @@
 .section-5 {
-   padding: 60px 0; 
+   padding: 60px 0;
    contain: layout paint;
 }
+
 .section-5__title-1 {
    max-width: 460px;
    margin-bottom: 30px;
 }
 
-
-
 .step-box {
-   max-width: 460px;
    display: flex;
    flex-flow: column;
+   gap: 50px;
+   max-width: 460px;
    margin-bottom: 40px;
    padding: 0 15px;
-   gap: 50px;
 }
+
 .step {
    display: flex;
    flex-flow: column;
    gap: 15px;
 }
+
 .step__picture {
    width: 60px;
    height: 60px;
-   border-radius: 15px;
    background-color: var(--color_baground);
+   border-radius: 15px;
 }
-
 
 .bullet {
    display: flex;
    flex-flow: column;
    gap: 20px;
 }
+
 .bullet__item {
    display: flex;
-   align-items: flex-start;
    gap: 10px;
-   font: 400 18px/1.5 'Inter';
+   align-items: flex-start;
+   font: 400 18px/1.5 "Inter";
 }
+
 .bullet__item::before {
-   content: '';
    min-width: 5px;
    min-height: 5px;
    margin-top: 10px;
-   border-radius: 50%;
    background-color: var(--color_text);
+   border-radius: 50%;
+   content: "";
 }
-
 
 .step__mark {
    display: inline;
-   color: rgb(9, 97, 246);
+   color: rgb(9 97 246);
 }
 
 .section-5__button-box {
-   justify-content: center;
    align-items: center;
+   justify-content: center;
 }
 
 @media all and (min-width: 576px) {
@@ -67,7 +68,6 @@
    }
 }
 
-
 @media all and (min-width: 768px) {
    .section-5__title-1 {
       max-width: 620px;
@@ -75,14 +75,13 @@
       margin-bottom: 40px;
       font-size: 45px;
    }
+
    .step-box {
       max-width: 620px;
       margin: 0 auto;
       margin-bottom: 30px;
    }
-
 }
-
 
 @media all and (min-width: 992px) {
    .section-5__title-1 {
@@ -90,20 +89,21 @@
       margin-bottom: 60px;
       font-size: 50px;
    }
+
    .step-box {
       flex-flow: row;
-      max-width: 940px;
       gap: 30px;
+      max-width: 940px;
       margin-bottom: 60px;
    }
 }
-
 
 @media all and (min-width: 1200px) {
    .section-5__title-1 {
       max-width: 1160px;
       font-size: 60px;
    }
+
    .step-box {
       flex-flow: row;
       max-width: 1160px;
