--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -81,19 +81,19 @@ audio,
 video,
 button,
 mark {
-   box-sizing: border-box;
    margin: 0;
-   padding: 0;
-   font-size: 100%;
-   text-decoration: none;
-   vertical-align: baseline;
-   list-style: none;
-   background-color: transparent;
-   border: 0;
    margin-block-start: 0;
    margin-block-end: 0;
    margin-inline-start: 0;
    margin-inline-end: 0;
+   padding: 0;
+   font-size: 100%;
+   text-decoration: none;
+   border: 0;
+   list-style: none;
+   background-color: transparent;
+   vertical-align: baseline;
+   box-sizing: border-box;
    padding-inline-start: 0;
 }
 
@@ -114,33 +114,31 @@ img {
 }
 
 input {
+   appearance: none;
    display: block;
    margin: 0;
    padding: 0;
-   color: inherit;
-   font-weight: normal;
-   font-size: inherit;
    font-family: inherit;
+   font-size: inherit;
+   font-weight: normal;
    font-style: normal;
    font-stretch: normal;
+   font-variant-caps: normal;
+   font-variant-east-asian: normal;
+   font-variant-ligatures: none;
+   font-variant-numeric: normal;
+   text-align: start;
+   text-indent: 0;
+   text-rendering: inherit;
+   text-shadow: none;
+   text-transform: none;
    line-height: normal;
    letter-spacing: normal;
-   text-align: start;
-   text-transform: none;
-   text-indent: 0;
-   text-shadow: none;
    word-spacing: normal;
-   border-color: transparent;
+   color: inherit;
    border-width: 0;
+   border-color: transparent;
    outline: none;
-   appearance: none;
-   font-variant-ligatures: none;
-   font-variant-caps: normal;
-   font-variant-numeric: normal;
-   font-variant-east-asian: normal;
-   text-rendering: inherit;
-   -webkit-appearance: none;
-   -moz-appearance: none;
 }
 
 blockquote,
@@ -166,27 +164,24 @@ table {
 }
 
 html {
-   height: 100%;
    overflow-x: hidden;
+   height: 100%;
    font: normal 400 16px/1.5 "Inter";
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
-   -ms-text-size-adjust: 100%;
-   -moz-text-size-adjust: 100%;
-   -webkit-text-size-adjust: 100%;
-   -webkit-overflow-scrolling: touch;
-   -ms-touch-action: manipulation;
-   touch-action: manipulation;
+   text-size-adjust: 100%;
    scroll-behavior: smooth;
+   touch-action: manipulation;
+   -webkit-overflow-scrolling: touch;
 }
 
 body {
-   position: relative;
-   min-width: 320px;
-   height: 100%;
    overflow-x: hidden;
-   color: var(--color_text);
+   position: relative;
+   height: 100%;
+   min-width: 320px;
    font: normal 400 16px/1.5 "Inter";
+   color: var(--color_text);
    scroll-behavior: smooth;
 }
 
